Debugging customer side

--- a/Key/KafkaProducer.ipynb
+++ b/Key/KafkaProducer.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "be584d9b-387d-42d1-8783-7edd3c411a4f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "0d73d09e-1d72-48de-95a9-e71cd15b87dc",
    "metadata": {},
    "outputs": [],
@@ -50,23 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "f7a87fc8-8ac5-418f-92ba-b20b3d6a7597",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<kafka.producer.future.FutureRecordMetadata at 0x11c838b90>"
+       "<kafka.producer.future.FutureRecordMetadata at 0x11cba9290>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "producer.send('demo_test', value=\"{'hello':'Darling'}\")"
+    "producer.send('demo_test', value=\"{'surname':'Parmar'}\")"
    ]
   },
   {
