Resolve the consumer: from json import loads

--- a/Key/KafkaProducer.ipynb
+++ b/Key/KafkaProducer.ipynb
@@ -10,11 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting kafka-python\n",
-      "  Downloading kafka_python-2.0.2-py2.py3-none-any.whl (246 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m246.5/246.5 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m1.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: kafka-python\n",
-      "Successfully installed kafka-python-2.0.2\n"
+      "Requirement already satisfied: kafka-python in /opt/homebrew/lib/python3.11/site-packages (2.0.2)\n"
      ]
     }
    ],
@@ -24,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "be584d9b-387d-42d1-8783-7edd3c411a4f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "0d73d09e-1d72-48de-95a9-e71cd15b87dc",
    "metadata": {},
    "outputs": [],
@@ -50,23 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "f7a87fc8-8ac5-418f-92ba-b20b3d6a7597",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<kafka.producer.future.FutureRecordMetadata at 0x11cba9290>"
+       "<kafka.producer.future.FutureRecordMetadata at 0x12a185d10>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "producer.send('demo_test', value=\"{'surname':'Parmar'}\")"
+    "producer.send('demo_test_new', value=\"{'ok':'Parmar'}\")"
    ]
   },
   {
