Try real-time proceed

--- a/Key/KafkaProducer.ipynb
+++ b/Key/KafkaProducer.ipynb
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "f7a87fc8-8ac5-418f-92ba-b20b3d6a7597",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<kafka.producer.future.FutureRecordMetadata at 0x145154c10>"
+       "<kafka.producer.future.FutureRecordMetadata at 0x13fefdbd0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "99ad9f20-89e8-4cff-953f-9da6e01605dc",
    "metadata": {},
    "outputs": [
@@ -280,27 +280,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>27419</th>\n",
-       "      <td>IXIC</td>\n",
-       "      <td>1990-10-22</td>\n",
-       "      <td>338.0</td>\n",
-       "      <td>342.100006</td>\n",
-       "      <td>336.700012</td>\n",
-       "      <td>341.100006</td>\n",
-       "      <td>341.100006</td>\n",
-       "      <td>114670000.0</td>\n",
-       "      <td>341.100006</td>\n",
+       "      <th>70089</th>\n",
+       "      <td>GSPTSE</td>\n",
+       "      <td>1995-09-11</td>\n",
+       "      <td>4574.399902</td>\n",
+       "      <td>4592.799805</td>\n",
+       "      <td>4574.399902</td>\n",
+       "      <td>4592.799805</td>\n",
+       "      <td>4592.799805</td>\n",
+       "      <td>47360000.0</td>\n",
+       "      <td>3812.023838</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Index        Date   Open        High         Low       Close  \\\n",
-       "27419  IXIC  1990-10-22  338.0  342.100006  336.700012  341.100006   \n",
+       "        Index        Date         Open         High          Low        Close  \\\n",
+       "70089  GSPTSE  1995-09-11  4574.399902  4592.799805  4574.399902  4592.799805   \n",
        "\n",
-       "        Adj Close       Volume    CloseUSD  \n",
-       "27419  341.100006  114670000.0  341.100006  "
+       "         Adj Close      Volume     CloseUSD  \n",
+       "70089  4592.799805  47360000.0  3812.023838  "
       ]
      },
      "execution_count": 9,
@@ -315,29 +315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "ba7ffc7e-b427-4165-bcf3-113db5a46fee",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# df.sample(1).to_dict()\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m----> 3\u001b[0m     dict_stock \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mto_dict(orient\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrecords\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      4\u001b[0m     producer\u001b[38;5;241m.\u001b[39msend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdemo_test_new\u001b[39m\u001b[38;5;124m'\u001b[39m, value\u001b[38;5;241m=\u001b[39mdict_stock)\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/core/generic.py:6029\u001b[0m, in \u001b[0;36mNDFrame.sample\u001b[0;34m(self, n, frac, replace, weights, random_state, axis, ignore_index)\u001b[0m\n\u001b[1;32m   6026\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m weights \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   6027\u001b[0m     weights \u001b[38;5;241m=\u001b[39m sample\u001b[38;5;241m.\u001b[39mpreprocess_weights(\u001b[38;5;28mself\u001b[39m, weights, axis)\n\u001b[0;32m-> 6029\u001b[0m sampled_indices \u001b[38;5;241m=\u001b[39m \u001b[43msample\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj_len\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreplace\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   6030\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(sampled_indices, axis\u001b[38;5;241m=\u001b[39maxis)\n\u001b[1;32m   6032\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ignore_index:\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/core/sample.py:152\u001b[0m, in \u001b[0;36msample\u001b[0;34m(obj_len, size, replace, weights, random_state)\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    150\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid weights: weights sum to zero\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 152\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m random_state\u001b[38;5;241m.\u001b[39mchoice(obj_len, size\u001b[38;5;241m=\u001b[39msize, replace\u001b[38;5;241m=\u001b[39mreplace, p\u001b[38;5;241m=\u001b[39mweights)\u001b[38;5;241m.\u001b[39mastype(\n\u001b[1;32m    153\u001b[0m     np\u001b[38;5;241m.\u001b[39mintp, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    154\u001b[0m )\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df.sample(1).to_dict()\n",
     "while True:\n",
     "    dict_stock = df.sample(1).to_dict(orient=\"records\")[0]\n",
-    "    producer.send('demo_test_new', value=dict_stock)\n"
+    "    producer.send('demo_test_new', value=dict_stock)\n",
+    "    sleep(1)"
    ]
   },
   {
