--- a/Key/KafkaConsumer.ipynb
+++ b/Key/KafkaConsumer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9af3dc9f-3b07-46de-bf4d-b085d4d16e3a",
    "metadata": {},
    "outputs": [
@@ -10,44 +10,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting s3fs\n",
-      "  Downloading s3fs-2023.12.2-py3-none-any.whl.metadata (1.6 kB)\n",
-      "Collecting aiobotocore<3.0.0,>=2.5.4 (from s3fs)\n",
-      "  Downloading aiobotocore-2.11.2-py3-none-any.whl.metadata (21 kB)\n",
-      "Collecting fsspec==2023.12.2 (from s3fs)\n",
-      "  Downloading fsspec-2023.12.2-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Requirement already satisfied: s3fs in /opt/homebrew/lib/python3.11/site-packages (2023.12.2)\n",
+      "Requirement already satisfied: aiobotocore<3.0.0,>=2.5.4 in /opt/homebrew/lib/python3.11/site-packages (from s3fs) (2.11.2)\n",
+      "Requirement already satisfied: fsspec==2023.12.2 in /opt/homebrew/lib/python3.11/site-packages (from s3fs) (2023.12.2)\n",
       "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /opt/homebrew/lib/python3.11/site-packages (from s3fs) (3.9.1)\n",
-      "Collecting botocore<1.34.35,>=1.33.2 (from aiobotocore<3.0.0,>=2.5.4->s3fs)\n",
-      "  Downloading botocore-1.34.34-py3-none-any.whl.metadata (5.7 kB)\n",
-      "Collecting wrapt<2.0.0,>=1.10.10 (from aiobotocore<3.0.0,>=2.5.4->s3fs)\n",
-      "  Downloading wrapt-1.16.0-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.6 kB)\n",
-      "Collecting aioitertools<1.0.0,>=0.5.1 (from aiobotocore<3.0.0,>=2.5.4->s3fs)\n",
-      "  Downloading aioitertools-0.11.0-py3-none-any.whl (23 kB)\n",
+      "Requirement already satisfied: botocore<1.34.35,>=1.33.2 in /opt/homebrew/lib/python3.11/site-packages (from aiobotocore<3.0.0,>=2.5.4->s3fs) (1.34.34)\n",
+      "Requirement already satisfied: wrapt<2.0.0,>=1.10.10 in /opt/homebrew/lib/python3.11/site-packages (from aiobotocore<3.0.0,>=2.5.4->s3fs) (1.16.0)\n",
+      "Requirement already satisfied: aioitertools<1.0.0,>=0.5.1 in /opt/homebrew/lib/python3.11/site-packages (from aiobotocore<3.0.0,>=2.5.4->s3fs) (0.11.0)\n",
       "Requirement already satisfied: attrs>=17.3.0 in /opt/homebrew/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs) (23.2.0)\n",
       "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/homebrew/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs) (6.0.4)\n",
       "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/homebrew/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs) (1.9.4)\n",
       "Requirement already satisfied: frozenlist>=1.1.1 in /opt/homebrew/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs) (1.4.1)\n",
       "Requirement already satisfied: aiosignal>=1.1.2 in /opt/homebrew/lib/python3.11/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->s3fs) (1.3.1)\n",
-      "Collecting jmespath<2.0.0,>=0.7.1 (from botocore<1.34.35,>=1.33.2->aiobotocore<3.0.0,>=2.5.4->s3fs)\n",
-      "  Downloading jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /opt/homebrew/lib/python3.11/site-packages (from botocore<1.34.35,>=1.33.2->aiobotocore<3.0.0,>=2.5.4->s3fs) (1.0.1)\n",
       "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/homebrew/lib/python3.11/site-packages (from botocore<1.34.35,>=1.33.2->aiobotocore<3.0.0,>=2.5.4->s3fs) (2.8.2)\n",
       "Requirement already satisfied: urllib3<2.1,>=1.25.4 in /opt/homebrew/lib/python3.11/site-packages (from botocore<1.34.35,>=1.33.2->aiobotocore<3.0.0,>=2.5.4->s3fs) (2.0.4)\n",
       "Requirement already satisfied: idna>=2.0 in /opt/homebrew/lib/python3.11/site-packages (from yarl<2.0,>=1.0->aiohttp!=4.0.0a0,!=4.0.0a1->s3fs) (3.4)\n",
       "Requirement already satisfied: six>=1.5 in /opt/homebrew/lib/python3.11/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.34.35,>=1.33.2->aiobotocore<3.0.0,>=2.5.4->s3fs) (1.16.0)\n",
-      "Downloading s3fs-2023.12.2-py3-none-any.whl (28 kB)\n",
-      "Downloading fsspec-2023.12.2-py3-none-any.whl (168 kB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m169.0/169.0 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading aiobotocore-2.11.2-py3-none-any.whl (76 kB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.1/76.1 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading botocore-1.34.34-py3-none-any.whl (11.9 MB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.9/11.9 MB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading wrapt-1.16.0-cp311-cp311-macosx_11_0_arm64.whl (38 kB)\n",
-      "Installing collected packages: wrapt, jmespath, fsspec, aioitertools, botocore, aiobotocore, s3fs\n",
-      "  Attempting uninstall: fsspec\n",
-      "    Found existing installation: fsspec 2023.10.0\n",
-      "    Uninstalling fsspec-2023.10.0:\n",
-      "      Successfully uninstalled fsspec-2023.10.0\n",
-      "Successfully installed aiobotocore-2.11.2 aioitertools-0.11.0 botocore-1.34.34 fsspec-2023.12.2 jmespath-1.0.1 s3fs-2023.12.2 wrapt-1.16.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -58,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "1c1b047b-a17a-46c1-bb79-bbe2de1e19c0",
    "metadata": {},
    "outputs": [],
@@ -72,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5b183fc2-1d50-4ad6-9e66-f396f6991075",
    "metadata": {},
    "outputs": [],
@@ -15673,7 +15652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "18858338-b288-485d-8064-7a6c4ed18767",
    "metadata": {},
    "outputs": [],
